# Voxline

./: .gitignore  AGENT.md  CMakeLists.txt  MANUAL.md  PLAN.md  PRODUCT.md  README.md  TODO.md  UI.md  UI_DESIGN_LANGUAGE.md  UI_V2_CENTER_POLISH_PLAN.md  UI_V2_FIXED_SPEC.md  V2_TODO.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: Assets.cpp  Assets.h  CustomKnob.cpp  CustomKnob.h  HeroKnob.cpp  HeroKnob.h  Layout.h  Theme.cpp  Theme.h  VoxlineMeter.cpp  VoxlineMeter.h
Source/UI/Assets/: README.md  voxline_asset_manifest.json
Tests/: Phase1Tests.cpp
build_x86/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
build_x86/CMakeScripts/: ReRunCMake.make
build_x86/Release/: VOXLINE_vst3_helper
build_x86/VOXLINE.xcodeproj/: project.pbxproj
build_x86/VOXLINEPhase1Tests_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build_x86/VOXLINEPhase1Tests_artefacts/JuceLibraryCode/Debug/: Defs.txt
build_x86/VOXLINEPhase1Tests_artefacts/JuceLibraryCode/MinSizeRel/: Defs.txt
build_x86/VOXLINEPhase1Tests_artefacts/Release/: VOXLINEPhase1Tests
build_x86/VOXLINE_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build_x86/VOXLINE_artefacts/JuceLibraryCode/Debug/: Defs.txt
build_x86/VOXLINE_artefacts/JuceLibraryCode/Release/: Defs.txt
build_x86/VOXLINE_artefacts/JuceLibraryCode/VOXLINE_AU/: Info.plist
build_x86/VOXLINE_artefacts/JuceLibraryCode/VOXLINE_VST3/: Info.plist
build_x86/VOXLINE_artefacts/Release/AU/VOXLINE.component/Contents/: Info.plist
build_x86/VOXLINE_artefacts/Release/VST3/VOXLINE.vst3/Contents/: Info.plist
build_x86/VOXLINE_artefacts/Release/VST3/VOXLINE.vst3/Contents/Resources/: moduleinfo.json
build_x86/VOXLINE_artefacts/Release/VST3/VOXLINE.vst3/Contents/_CodeSignature/: CodeResources
build_x86/juce_binarydata_VOXLINEAssets/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData10.cpp  BinaryData11.cpp  BinaryData12.cpp  BinaryData13.cpp  BinaryData14.cpp  BinaryData2.cpp  BinaryData3.cpp  BinaryData4.cpp  BinaryData5.cpp  BinaryData6.cpp  BinaryData7.cpp  BinaryData8.cpp  BinaryData9.cpp  input_file_list
installer/windows/: installer.nsi
